feat: implementa AuthService (RF002) e SolicitacaoService com registro de historico (RF008)